--- a/admin/index.html
+++ b/admin/index.html
@@ -16,7 +16,7 @@
     div.classList.add("css-1hvrgvd-CollectionTopContainer-card-cardTop")
     div.classList.add("enajvhy0")
     div.innerHTML = '<div class="css-q8mdjk-CollectionTopRow enajvhy1"><h2 class="css-1mtos59-ListCardTitle eab48an5">asdfasdasdfasdfasdasfad</h2></div>';
-    $("main").insertBefore(div,$("main > :first-child"));
+    document.querySelector("main").insertBefore(div,document.querySelector("main > :first-child"));
 });
   </script>
 </body>
